# mooncaml

./: .gitignore  .ocamlformat  LICENSE  ProjectSummary.md  README.md  dune-project  mooncaml.opam  mooncaml_client.opam  mooncaml_server.opam  mooncaml_shared.opam  summarize.sh
.copilot/instructions/: feature-work.instructions.md
data/db/: schema.sql
data/maps/: oasis.kra
lib/: client.ml  dune  game.ml  hub.ml  logging.ml  packet.ml  server.ml  state.ml  types.ml
lib/client/: drawing.ml  dune  game.ml  input.ml  modals.ml  net_client.ml  textbox.ml  types.ml  util.ml  windows.ml
lib/server/: client.ml  dune  hub.ml  maps.ml  server.ml
lib/server/db/: dune  models.ml  queries.ml  repository.ml  types.ml  util.ml
lib/server/maps/: dune  oasis.ml
lib/shared/: dune  entities.ml  logging.ml  maps.ml  packet.ml  terrain.ml
test/: dune
