(library
 (name mooncaml_shared)
 (libraries sexplib logs logs.lwt logs.fmt fmt.tty lwt lwt.unix)
 (preprocess
  (pps ppx_sexp_conv)))

(rule
 (mode promote)
 (targets maps.ml)
 (deps
	%{bin:bmp2ml}
	(glob_files %{workspace_root}/data/maps/*.bmp))
 (action
	(run
	 %{bin:bmp2ml}
	 --input-dir %{workspace_root}/data/maps
	 --output-file ./maps.ml)))
